# eunhwi-lee

./: .gitignore  pyproject.toml
HW2/: 01_review-scope-outline.py  02_review-crolling.py  03_review-abstract.py  week3_prompt_chaining_iteration.ipynb
HW2/outputs/: 01_response.md  02_auto_table.csv  02_auto_table.json  03_response.md
